# PILA-Code

./: .gitmodules  README.md  pila.yml
dataset/: README.md  cldf_analyzer.py  cldf_converter.py  compatibility_checker.py  pila.yml  proto_studier.py  scraper.py
dataset/data/cldf/: .gitkeep
dataset/utils/common/: __init__.py  constants.py  helpers.py  messages.py
dataset/utils/data/: __init__.py  builders.py  cldf.py  constants.py  enumerations.py  loaders.py  structures.py  tables.py
dataset/utils/scraping/: __init__.py  constants.py  enumerations.py  spider.py  structures.py
experiments/: .gitignore  README.md  pyproject.toml
experiments/data/pila-test/: etyma.seg  reflexes.seg
experiments/data/pila-train/: etyma.seg  reflexes.seg
experiments/experiments/pila/: include.bash  print_hyperparameter_table.bash  submit_split_data_job.bash  submit_train_and_eval_jobs.bash
experiments/predictions/: backward.tsv  forward.tsv
experiments/src/pila/: csv_to_seg.py  evaluate_model.bash  format_eval.py  print_hyperparameter_table.py  print_table.py  train_and_evaluate_model.bash
experiments/src/sequence_to_sequence/: prepare_data_utils.py
transduction/: Dockerfile-dev  README.md
transduction/data/pila-valid/: etyma.seg  reflexes.seg
transduction/experiments/: include.bash  run-singularity.bash
transduction/experiments/pila/: print_table.bash  rescore_models.bash  submit_prepare_data_job.bash
transduction/scripts/: docker-exec.bash  setup.bash  variables.bash
transduction/src/pila/: evaluate.py  (+5 more)
transduction/tests/: test_custom_transformer_encoder.py
(+44 files in other folders)
